--- a/css/styles.css
+++ b/css/styles.css
@@ -171,13 +171,20 @@ img {
 .advantages-list {
     display: flex;
     flex-shrink: 0;
-    gap: 24px;
+    padding: 0;
+    margin: 0;
+    /* gap: 24px; */
 }
 
 .advantages-list-item {
     width: calc((100% - 72px) / 4);
     flex-direction: column;
     align-items: flex-start;
+    margin-right: 24px;
+}
+
+.advantages-list-item:last-child {
+    margin-right: 0;
 }
 
 .third-title {
@@ -239,7 +246,6 @@ img {
     background-color: var(--color-white);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-
 }
 
 .member-description {
@@ -262,7 +268,6 @@ img {
     border: 1px solid var(--color--cornflower);
     width: calc((100% - 48px) / 3);
     display: flex;
-    /* width: 360px; */
     height: 420px;
     padding-bottom: 0px;
     flex-direction: column;
