--- a/css/styles.css
+++ b/css/styles.css
@@ -171,20 +171,13 @@ img {
 .advantages-list {
     display: flex;
     flex-shrink: 0;
-    padding: 0;
-    margin: 0;
-    /* gap: 24px; */
+    gap: 24px;
 }
 
 .advantages-list-item {
     width: calc((100% - 72px) / 4);
     flex-direction: column;
     align-items: flex-start;
-    margin-right: 24px;
-}
-
-.advantages-list-item:last-child {
-    margin-right: 0;
 }
 
 .third-title {
