--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ img {
     gap: 24px;
 }
 
-.advantages-list-item {
+.advantages-list .advantages-list-item {
     width: calc((100% - 72px) / 4);
     flex-direction: column;
     align-items: flex-start;
@@ -229,7 +229,7 @@ img {
     gap: 24px;
 }
 
-.team-member {
+.team-members-list .team-member {
     display: inline-flex;
     padding-bottom: 0px;
     flex-direction: column;
@@ -257,7 +257,7 @@ img {
     row-gap: 48px;
 }
 
-.portfolio-example {
+.portfolio-examples-list .portfolio-example {
     border: 1px solid var(--color--cornflower);
     width: calc((100% - 48px) / 3);
     display: flex;
