--- a/css/styles.css
+++ b/css/styles.css
@@ -174,8 +174,8 @@ img {
     gap: 24px;
 }
 
-.advantages-list .advantages-list-item {
-    width: calc((100% - 72px) / 4);
+.advantages-list-item {
+    flex-basis: calc((100% - 3 * 24px) / 4);
     flex-direction: column;
     align-items: flex-start;
 }
@@ -229,13 +229,13 @@ img {
     gap: 24px;
 }
 
-.team-members-list .team-member {
+.team-member {
+    width: calc((100% - 3 * 24px) / 4);
     display: inline-flex;
     padding-bottom: 0px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: calc((100% - 72px) / 4); 
     background-color: var(--color-white);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
@@ -257,9 +257,9 @@ img {
     row-gap: 48px;
 }
 
-.portfolio-examples-list .portfolio-example {
-    border: 1px solid var(--color--cornflower);
+.portfolio-example {
     width: calc((100% - 48px) / 3);
+    border: 1px solid var(--color--cornflower);
     display: flex;
     height: 420px;
     padding-bottom: 0px;
