--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ img {
 }
 
 .advantages-list-item {
-    flex-basis: calc((100% - 3 * 24px) / 4);
+    width: calc((100% - 3 * 24px) / 4);
     flex-direction: column;
     align-items: flex-start;
 }
