--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6, p {
 ul, ol {
     list-style-type: none;
     margin: 0;
-    padding-left: 0;
+    padding: 0;
 }
 
 img {
@@ -57,7 +57,6 @@ img {
 .nav {
     display: flex;
     align-items: center;
-    margin-right: 332px;
 }
 
 .nav-logo {
